# anki-english

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  English Academic Vocabulary.txt  README.md  USER_NOTES.md  conftest.py  pyproject.toml  requirements.txt  update_anki_deck.py
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
data/: README.md  anki_notes.jsonl  audit_expanded_needs_gloss_filled.jsonl  audit_full_deck_v2.jsonl  convention_p8_decisions.jsonl  gloss_policy_review_p4c.jsonl  gloss_precision_phrase_p5.jsonl  manual_gloss_review_p5d_decisions.jsonl  multisense_harddrop_p6_decisions.jsonl  oxford_labels.json  oxford_symbols.json  redundant_sense_trim_p7_decisions.jsonl
design/: README.md  card-improvement-notes.md  card-improvement-user-notes.md  index.html  sense_grouping_review.md
deutsch/: .gitignore  README.md
docs/: README.md
src/: config.py  design_css.py  pipeline.py
tests/: test_config.py  test_documentation_contracts.py  test_drift_guard.py  test_pipeline.py  test_schema_validation.py
tools/: README.md  _apply_card_identity_p2.py  _apply_gloss_hygiene.py  _apply_p4b_rule_shape_fix.py  _apply_p4c_policy_review.py  _apply_p5_precision_phrase.py  _apply_p8_convention_hotfix.py  _apply_txt_escaped_pipe_p3a.py  _audit_gloss_policy_coverage.py  _check_gloss_hygiene.py  _detect_lexical_loops.py  _fix_oxford_def_fields.py  _full_audit.py  _merge_expanded_glosses.py  _run_full_cache.py  _validate_jsonl.py  _verify_deck_output_p3b.py  _verify_p12_p13_pipe_sense_hotfix.py  _verify_p4a_coverage_fix.py  (+29 more)
(+298 files in other folders)
